# platform-cmp-trail-library

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  settings.yml
.github/workflows/: release.yml  tests.yml  version.yml
src/: block.rs  content.rs  lib.rs  metadata.rs  owner.rs  signer.rs  transaction.rs  utils.rs  writer.rs
src/block/: block_model.rs  block_service.rs  model.rs  model_txn.rs  service.rs
src/content/: content_empty.rs  content_license.rs  content_schema.rs  content_schema_type.rs  content_serializer.rs  content_tag.rs  content_tag_type.rs  content_title.rs  content_use.rs  content_use_case.rs  content_use_case_type.rs
src/metadata/: metadata_model.rs  metadata_model_signer.rs  metadata_service.rs  model.rs  service.rs
src/signer/: model.rs  service.rs  signer_model.rs  signer_service.rs
src/transaction/: content_schema.rs  content_type.rs  model.rs  register.rs  service.rs  transaction_model.rs  transaction_service.rs
src/utils/: s3_client.rs  sqs_client.rs
src/writer/: writer_body_initialize.rs  writer_body_transaction.rs  writer_group.rs  writer_group_type.rs
