[package]
name = "mytiki-core-trail-storage"
description = "Generic storage libaray for interacting with the raw mytiki.com trail assets."
version = "0.1.1"
repository = "https://github.com/tiki/core-trail-storage"
homepage = "https://mytiki.com"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = [".github/*"]

[dependencies]
aws-sdk-s3 = { version =  "1.17.0" , features = ["behavior-version-latest"] }
aws-config = "1.1.7"
md-5 = "0.11.0-pre.3"
num-bigint = "0.4.4"
base64 = "0.22.0"
sha3 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = ["serde"] }
ring = "0.17.8"
tokio = { version = "1.36.0", features = ["macros", "io-util"] }

[dev-dependencies]
tokio-test = "0.4.4"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4"] }
